Removed drawer, added Download (working) and Upload (not working yet) menu items
Upgraded MudBlazor to get MudFileUpload but I think it needs to be in a form.

--- a/OzricUI/Components/ValueEditorComponent.razor
+++ b/OzricUI/Components/ValueEditorComponent.razor
@@ -120,7 +120,7 @@
         };
 
         var result = await DialogService.Show(typeof(ColorPickerDialog), "Choose Color", parameters, options).Result;
-        if (result.Cancelled)
+        if (result.Canceled)
             return;
 
         color = (ColorValue) result.Data;
