Got upload mostly working

--- a/OzricUI/Components/GraphEditor.razor
+++ b/OzricUI/Components/GraphEditor.razor
@@ -105,6 +105,10 @@
                 DoDelete();
                 break;
                 
+            case GraphEditState.Command.Rebuild:
+                PopulateDiagram();
+                break;
+                
             default:
                 throw new ArgumentOutOfRangeException(nameof(command), command, null);
         }
