Don't confuse Navigator with absolute path

--- a/OzricUI/Components/ConfigDialog.razor
+++ b/OzricUI/Components/ConfigDialog.razor
@@ -2,8 +2,8 @@
 
 <MudDialog>
         <DialogContent>
-            <MudTextField Value="@Config.GetBaseUrl()" Label="Base URL" ReadOnly="true"/>
-            <MudTextField Value="@Config.GetPort()" Label="Port" ReadOnly="true"/>
+            <MudTextField Value="@Config.Path" Label="Base URL" ReadOnly="true"/>
+            <MudTextField Value="@Config.Port" Label="Port" ReadOnly="true"/>
         </DialogContent>
 
     <DialogActions>
