--- a/OzricUI/Components/InfoDialog.razor
+++ b/OzricUI/Components/InfoDialog.razor
@@ -2,15 +2,17 @@
 
 <MudDialog>
     <DialogContent>
-        <MudPaper Elevation="0" Height="50%">
-            <MudSpacer />
-            <MudText Typo="Typo.h6">Configuration</MudText>
-            <MudTextField Value="@Config.Path" Label="Base URL" ReadOnly="true" Variant="Variant.Outlined"/>
-            <MudTextField Value="@Config.Port" Label="Port" ReadOnly="true" Variant="Variant.Outlined"/>
-            <MudSpacer />
-            <MudText Typo="Typo.h6">Status</MudText>
-            <MudTextField Value="@GetHubHealth()" Label="Hub Health" ReadOnly="true" Variant="Variant.Outlined"/>
-        </MudPaper>
+        <MudGrid Spacing="6">
+            <MudItem>
+                <MudText Typo="Typo.h6">Configuration</MudText>
+                <MudTextField Value="@Config.Path" Label="Base URL" ReadOnly="true" Variant="Variant.Outlined"/>
+                <MudTextField Value="@Config.Port" Label="Port" ReadOnly="true" Variant="Variant.Outlined"/>
+            </MudItem>
+            <MudItem>
+                <MudText Typo="Typo.h6">Status</MudText>
+                <MudTextField Value="@GetHubHealth()" Label="Hub Health" ReadOnly="true" Variant="Variant.Outlined"/>
+            </MudItem>
+        </MudGrid>
     </DialogContent>
  
      <DialogActions>
