--- a/OzricUI/_Imports.razor
+++ b/OzricUI/_Imports.razor
@@ -12,3 +12,4 @@
 @using Blazor.Diagrams.Core.Geometry
 @using Blazor.Diagrams.Core.Models
 @using MudBlazor
+@inject CookieProvider CookieProviderService
